<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <PreferenceCategory android:title="@string/Moneda">
        <ListPreference
            android:entries="@array/listentriesMoneda"
            android:entryValues="@array/listvaluesMoneda"
            android:defaultValue="Euros"
            android:key="PREF_LIST_MONEDAS"
            android:title="@string/monedas" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/Entidad_bancaria_usuario">
        <ListPreference
            android:entries="@array/listentriesEntidadesBancarias"
            android:entryValues="@array/listvaluesEntidadesBancarias"
            android:defaultValue="BBVA"
            android:key="PREF_LIST_ENTIDAD"
            android:title="@string/entidad_bancaria_usuario" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/Distancia_maxima">
        <ListPreference
            android:entries="@array/listentriesDistancia"
            android:entryValues="@array/listvaluesDistancia"
            android:defaultValue="100000"
            android:key="PREF_LIST_DISTANCIA"
            android:title="@string/distancia_maxima" />
    </PreferenceCategory>
</PreferenceScreen>